<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wifi_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/floating_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="75dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/settings_button"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="28dp"
                    app:cardBackgroundColor="@color/cardBackColor"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/function_settings"
                        android:textColor="@color/grayPrimary"
                        android:textSize="12sp" />

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/ic_settings"
                app:backgroundTint="@color/grayPrimary"
                app:elevation="8dp"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scanning_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/settings_layout"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/scanning_button"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="22dp"
                    app:cardBackgroundColor="@color/cardBackColor"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/function_scan_code"
                        android:textColor="@color/grayPrimary"
                        android:textSize="12sp" />

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/scanning_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:src="@mipmap/ic_scanning"
                app:backgroundTint="@color/grayPrimary"
                app:elevation="8dp"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/self_wifi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scanning_layout"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/self_wifi_button"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="22dp"
                    app:cardBackgroundColor="@color/cardBackColor"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/function_create_code"
                        android:textColor="@color/grayPrimary"
                        android:textSize="12sp" />

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/self_wifi_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:src="@mipmap/ic_wifi_code"
                app:backgroundTint="@color/grayPrimary"
                app:elevation="8dp"
                app:fabSize="mini" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/noFindHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="201dp"
        android:text="@string/search_no_find"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/wifi_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_floating"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="8dp" />

</android.support.design.widget.CoordinatorLayout>
